# catrobot_entry_test_gsoc-26

./: .env.example  .gitignore  PROMPT.md  README.md  pyproject.toml  sample_output.json
data/: agro_ecosystem_sample.csv  generated_crisis.csv
ecosystem_narrator/: __init__.py  __main__.py  analyzer.py  api.py  cli.py  models.py  narrator.py  report_generator.py  scenario_generator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  DataTable.jsx  NarrationCard.jsx
frontend/src/workers/: csvParser.worker.js
tests/: test_analyzer.py
